change exp page structure - left area

--- a/html/exp.html
+++ b/html/exp.html
@@ -18,22 +18,38 @@
             <table style="display: block">
                 <thead>
                     <tr>
-                        <th scope="col" style="width:100px">#</th>
                         <th scope="col">
-                            Term B
+                            Term A
                         </th>
 
+                        <th scope="col" style="width:100px">#</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">
+                        <td colspan="2" scope="row">
+                            &nbsp;
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <th colspan="2" scope="row">
                             Column Name
                         </th>
-                        <td id="A_col_name">
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" id="A_col_name">
                             FirstName
                         </td>
                     </tr>
+
+                    <tr>
+                        <td colspan="2" scope="row">
+                            &nbsp;
+                        </td>
+                    </tr>
+
                     <tr id="row_type_A">
                         <th scope="row">
                             Column Type
@@ -73,6 +89,8 @@
                     </td>
                 </tr>
             </table>
+
+            <br>
 
             <table class="table" style="height: 300px; display: block; overflow: auto;">
                 <tr>
