change exp page structure - sides areas

--- a/html/exp.html
+++ b/html/exp.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="col-sm-3">
-            <table style="display: block">
+            <table class="sideTableExp" style="display: block">
                 <thead>
                     <tr>
                         <th scope="col">
@@ -50,22 +50,36 @@
                         </td>
                     </tr>
 
-                    <tr id="row_type_A">
-                        <th scope="row">
+                    <tr>
+                        <th colspan="2" id="row_type_A" scope="row">
                             Column Type
                         </th>
-                        <td id="A_col_type">
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" id="A_col_type">
                             String
                         </td>
                     </tr>
-                    <tr id="row_instance_A">
-                        <th scope="row">
+
+                    <tr>
+                        <td colspan="2" scope="row">
+                            &nbsp;
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <th colspan="2" id="row_instance_A" scope="row">
                             Instance Example
                         </th>
-                        <td id="A_col_instance">
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" id="A_col_instance">
                             A, B
                         </td>
                     </tr>
+
                 </tbody>
 
             </table>
@@ -147,7 +161,7 @@
         </div>
 
         <div class="col-sm-3">
-            <table style="display: block">
+            <table class="sideTableExp" style="display: block">
                 <thead>
                     <tr>
                         <th scope="col" style="width:100px">#</th>
@@ -158,33 +172,62 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">
-                            Column Name
-                        </th>
-                        <td id="B_col_name">
-                            YourName
-                        </td>
+                <tr>
+                    <td colspan="2" scope="row">
+                        &nbsp;
+                    </td>
+                </tr>
 
-                    </tr>
-                    <tr id="row_type_B">
-                        <th scope="row">
-                            Column Type
-                        </th>
-                        <td  id="B_col_type">
-                            Varchar
-                        </td>
-                    </tr>
-                    <tr id="row_instance_B">
-                        <th scope="row">
-                            Instance Example
-                        </th>
-                        <td id="B_col_instance">
-                            C, D
-                        </td>
+                <tr>
+                    <th colspan="2" scope="row">
+                        Column Name
+                    </th>
+                </tr>
 
-                    </tr>
+                <tr>
+                    <td colspan="2" id="B_col_name">
+                        FirstName
+                    </td>
+                </tr>
+
+                <tr>
+                    <td colspan="2" scope="row">
+                        &nbsp;
+                    </td>
+                </tr>
+
+                <tr>
+                    <th colspan="2" id="row_type_B" scope="row">
+                        Column Type
+                    </th>
+                </tr>
+
+                <tr>
+                    <td colspan="2" id="B_col_type">
+                        String
+                    </td>
+                </tr>
+
+                <tr>
+                    <td colspan="2" scope="row">
+                        &nbsp;
+                    </td>
+                </tr>
+
+                <tr>
+                    <th colspan="2" id="row_instance_B" scope="row">
+                        Instance Example
+                    </th>
+                </tr>
+
+                <tr>
+                    <td colspan="2" id="B_col_instance">
+                        A, B
+                    </td>
+                </tr>
+
                 </tbody>
+
             </table>
         </div>
 
