change exp page structure - sides areas first line and page height

--- a/html/exp.html
+++ b/html/exp.html
@@ -18,31 +18,12 @@
             <table class="sideTableExp" style="display: block">
                 <thead>
                     <tr>
-                        <th scope="col">
-                            Term A
+                        <th colspan="2" scope="colgroup" id="A_col_name">
+                            Term A - FirstName
                         </th>
-
-                        <th scope="col" style="width:100px">#</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td colspan="2" scope="row">
-                            &nbsp;
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <th colspan="2" scope="row">
-                            Column Name
-                        </th>
-                    </tr>
-
-                    <tr>
-                        <td colspan="2" id="A_col_name">
-                            FirstName
-                        </td>
-                    </tr>
 
                     <tr>
                         <td colspan="2" scope="row">
@@ -106,7 +87,7 @@
 
             <br>
 
-            <table class="table" style="height: 300px; display: block; overflow: auto;">
+            <table class="table" id="HierarchyTable" style="height: 300px; display: block; overflow: auto;">
                 <tr>
                     <th scope="col">
                         Term A Hierarchy
@@ -162,33 +143,16 @@
 
         <div class="col-sm-3">
             <table class="sideTableExp" style="display: block">
+
                 <thead>
-                    <tr>
-                        <th scope="col" style="width:100px">#</th>
-                        <th scope="col">
-                            Term B
-                        </th>
-
-                    </tr>
-                </thead>
-                <tbody>
                 <tr>
-                    <td colspan="2" scope="row">
-                        &nbsp;
-                    </td>
-                </tr>
-
-                <tr>
-                    <th colspan="2" scope="row">
-                        Column Name
+                    <th colspan="2" scope="colgroup" id="B_col_name">
+                        Term B - FirstName
                     </th>
                 </tr>
+                </thead>
 
-                <tr>
-                    <td colspan="2" id="B_col_name">
-                        FirstName
-                    </td>
-                </tr>
+                <tbody>
 
                 <tr>
                     <td colspan="2" scope="row">
