change exp page structure - sides areas first line, page height and red bold in the hier.

--- a/html/exp.html
+++ b/html/exp.html
@@ -69,8 +69,8 @@
         <div class="col-sm-4">
             <table>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
                 </tr>
                 <tr id="row_control">
                     <th colspan="2" scope="colgroup">
@@ -130,7 +130,7 @@
                                 <!--<td id="table_b_{{$index}}">
                                     {{decorateWithSpace($index,item2.val)}}
                                 </td>-->
-                                <td style="color:{{item2.color}}">
+                                <td style="color:{{item2.color}}; font-weight:{{item2.weight}}">
                                     <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
                                 </td>
                             </tr>
