--- a/html/statistics.html
+++ b/html/statistics.html
@@ -4,6 +4,18 @@
     <h5 >Statistics</h5>
 
     <div class="row">
+
+        <div class="col-sm-6">
+            <canvas id="confidenceLineGraphAggregate"></canvas>
+        </div>
+
+        <div class="col-sm-6">
+            <canvas id="timeBarGraphAggregate"></canvas>
+        </div>
+
+    </div>
+
+    <div class="row">
         <div class="col"></div>
 
         <div class="col-sm-10">
