change system suggestion object

--- a/html/exp.html
+++ b/html/exp.html
@@ -67,23 +67,14 @@
         </div>
 
         <div class="col-sm-4">
-            <table>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr id="row_control">
-                    <th colspan="2" scope="colgroup">
-                        System Suggestion
-                    </th>
-                </tr>
 
-                <tr>
-                    <td colspan="2" id="exp_pair_score" style="text-align:center">
-                        0.6 similar
-                    </td>
-                </tr>
-            </table>
+            <div id="row_control" style="text-align:center; font-weight: 400">
+                System Suggestion
+            </div>
+
+            <div id="exp_pair_score" style="text-align:center">
+                0.6
+            </div>
 
             <br>
 
