change sides exp objects

--- a/html/exp.html
+++ b/html/exp.html
@@ -15,55 +15,31 @@
         </div>
 
         <div class="col-sm-3">
-            <table class="sideTableExp" style="display: block">
-                <thead>
-                    <tr>
-                        <th colspan="2" scope="colgroup" id="A_col_name" style="font-weight: 700; font-size: larger;">
-                            Term A - FirstName
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
 
-                    <tr>
-                        <td colspan="2" scope="row">
-                            &nbsp;
-                        </td>
-                    </tr>
+            <div id="A_col_name" style="text-align:center; font-weight: 700; font-size: larger;">
+                Term A - FirstName
+            </div>
 
-                    <tr>
-                        <th colspan="2" id="row_type_A" scope="row">
-                            Column Type
-                        </th>
-                    </tr>
+            <br>
 
-                    <tr>
-                        <td colspan="2" id="A_col_type">
-                            String
-                        </td>
-                    </tr>
+            <div id="row_type_A" style="font-weight: 400; text-align:center">
+                Column Type
+            </div>
 
-                    <tr>
-                        <td colspan="2" scope="row">
-                            &nbsp;
-                        </td>
-                    </tr>
+            <div id="A_col_type" style="font-weight: 100; text-align:center">
+                String
+            </div>
 
-                    <tr>
-                        <th colspan="2" id="row_instance_A" scope="row">
-                            Instance Example
-                        </th>
-                    </tr>
+            <br>
 
-                    <tr>
-                        <td colspan="2" id="A_col_instance">
-                            A, B
-                        </td>
-                    </tr>
+            <div id="row_instance_A" style="font-weight: 400; text-align:center">
+                Instance Example
+            </div>
 
-                </tbody>
+            <div id="A_col_instance" style="font-weight: 100; text-align:center">
+                A, B
+            </div>
 
-            </table>
         </div>
 
         <div class="col-sm-4">
@@ -72,7 +48,7 @@
                 System Suggestion
             </div>
 
-            <div id="exp_pair_score" style="text-align:center">
+            <div id="exp_pair_score" style="font-weight: 100; text-align:center">
                 0.6
             </div>
 
@@ -133,57 +109,30 @@
         </div>
 
         <div class="col-sm-3">
-            <table class="sideTableExp" style="display: block">
 
-                <thead>
-                <tr>
-                    <th colspan="2" scope="colgroup" id="B_col_name" style="font-weight: 700; font-size: larger;">
-                        Term B - FirstName
-                    </th>
-                </tr>
-                </thead>
+            <div id="B_col_name" style="text-align:center; font-weight: 700; font-size: larger;">
+                Term B - FirstName
+            </div>
 
-                <tbody>
+            <br>
 
-                <tr>
-                    <td colspan="2" scope="row">
-                        &nbsp;
-                    </td>
-                </tr>
+            <div id="row_type_B" style="font-weight: 400; text-align:center">
+                Column Type
+            </div>
 
-                <tr>
-                    <th colspan="2" id="row_type_B" scope="row">
-                        Column Type
-                    </th>
-                </tr>
+            <div id="B_col_type" style="font-weight: 100; text-align:center">
+                String
+            </div>
 
-                <tr>
-                    <td colspan="2" id="B_col_type">
-                        String
-                    </td>
-                </tr>
+            <br>
 
-                <tr>
-                    <td colspan="2" scope="row">
-                        &nbsp;
-                    </td>
-                </tr>
+            <div id="row_instance_B" style="font-weight: 400; text-align:center">
+                Instance Example
+            </div>
 
-                <tr>
-                    <th colspan="2" id="row_instance_B" scope="row">
-                        Instance Example
-                    </th>
-                </tr>
-
-                <tr>
-                    <td colspan="2" id="B_col_instance">
-                        A, B
-                    </td>
-                </tr>
-
-                </tbody>
-
-            </table>
+            <div id="B_col_instance" style="font-weight: 100; text-align:center">
+                A, B
+            </div>
         </div>
 
         <div class="col"></div>
