--- a/html/statistics.html
+++ b/html/statistics.html
@@ -1,7 +1,21 @@
 
 <div id="statistics" class="col-sm-12" style="margin-top: 100px;margin-left: 20px">
 
-    <h5 >Statistics</h5>
+
+    <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-8">
+            <h3>Statistics</h3>
+        </div>
+        <div class="col-sm-2">
+            <a class="nav-link waves-effect" href="#"  data-toggle="modal" data-target="#instruction_modal">
+                <span class="glyphicon glyphicon-filter"></span>
+            </a>
+        </div>
+        <div class="col-sm-1"></div>
+
+        <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+    </div>
 
     <div class="row">
 
