--- a/html/statistics.html
+++ b/html/statistics.html
@@ -1,21 +1,19 @@
 
-<div id="statistics" class="col-sm-12" style="margin-top: 100px;margin-left: 20px">
+<div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 20px">
 
 
     <div class="row">
-        <div class="col-sm-1"></div>
         <div class="col-sm-8">
             <h3>Statistics</h3>
         </div>
         <div class="col-sm-2">
-            <a class="nav-link waves-effect" href="#"  data-toggle="modal" data-target="#instruction_modal">
+            <a href="#" data-toggle="modal" data-target="#filter_statistics_modal">
                 <span class="glyphicon glyphicon-filter"></span>
             </a>
         </div>
-        <div class="col-sm-1"></div>
-
-        <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
     </div>
+
+    <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
 
     <div class="row">
 
@@ -40,4 +38,24 @@
 
     </div>
 
+</div>
+
+<div class="modal fade" id="filter_statistics_modal" tabindex="-1" role="dialog" aria-labelledby="Filter Statistics Modal" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" >Filter Statistics</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-md btn-info m-1 px-3 close" type="button" data-dismiss="modal" aria-label="Close">
+                    Apply changes</button>
+            </div>
+        </div>
+    </div>
 </div>
