update first row of statistics.html for admin

--- a/html/statistics.html
+++ b/html/statistics.html
@@ -1,6 +1,5 @@
 
-<div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 20px">
-
+<div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 30px">
 
     <div class="row">
         <div class="col-sm-8">
@@ -8,7 +7,7 @@
         </div>
         <div class="col-sm-2">
             <a href="#" data-toggle="modal" data-target="#filter_statistics_modal">
-                <span class="glyphicon glyphicon-filter"></span>
+                <i class="fa fa-filter" aria-hidden="true"></i>
             </a>
         </div>
     </div>
