--- a/html/statistics.html
+++ b/html/statistics.html
@@ -1,18 +1,20 @@
 
-<div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 30px">
+<div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 30px; margin-right: 30px">
 
     <div class="row">
-        <div class="col-sm-8">
+        <div style="width: 80%">
             <h3>Statistics</h3>
         </div>
-        <div class="col-sm-2">
-            <a href="#" data-toggle="modal" data-target="#filter_statistics_modal">
-                <i class="fa fa-filter" aria-hidden="true"></i>
+        <div style="width: 20%">
+            <a href="#" data-toggle="modal" data-target="#filter_statistics_modal" style="float: right;">
+                <i class="fa fa-filter" aria-hidden="true" style="font-size: 30px; line-height: 50px; height: 25px; float: right;"></i>
             </a>
         </div>
     </div>
 
-    <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+    <div class="row">
+        <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+    </div>
 
     <div class="row">
 
