--- a/html/statistics.html
+++ b/html/statistics.html
@@ -2,13 +2,18 @@
 <div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 30px; margin-right: 30px">
 
     <div class="row">
-        <div style="width: 80%">
-            <h3>Statistics</h3>
-        </div>
-        <div style="width: 20%">
-            <a href="#" data-toggle="modal" data-target="#filter_statistics_modal" style="float: right;">
-                <i class="fa fa-filter" aria-hidden="true" style="font-size: 30px; line-height: 50px; height: 25px; float: right;"></i>
-            </a>
+        <div class="col">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h3>Statistics</h3>
+                </div>
+                <div class="col-sm-3">
+                    <a href="#" data-toggle="modal" data-target="#filter_statistics_modal" style="float: right;">
+                        <i class="fa fa-filter" aria-hidden="true" style="font-size: 30px; line-height: 50px; height: 25px; float: right;"></i>
+                    </a>
+                </div>
+            </div>
+            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
         </div>
     </div>
 
@@ -52,9 +57,28 @@
             </div>
             <div class="modal-body">
 
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="md-form">
+                            <i class="fas fa-user prefix"></i>
+                            <input type="text" class="form-control" id="filter_stat_by_user">
+                            <label for="filter_stat_by_user">Filter By User</label>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <div class="md-form">
+                            <i class="fas fa-users"></i>
+                            <input type="text" class="form-control" id="filter_stat_by_group">
+                            <label for="filter_stat_by_group">Filter By Exp Group</label>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
             <div class="modal-footer">
-                <button class="btn btn-md btn-info m-1 px-3 close" type="button" data-dismiss="modal" aria-label="Close">
+                <button class="close btn btn-md btn-info m-1 px-3" type="button" data-dismiss="modal" aria-label="Close">
                     Apply changes</button>
             </div>
         </div>
