--- a/html/statistics.html
+++ b/html/statistics.html
@@ -64,13 +64,24 @@
                             <input type="text" class="form-control" id="filter_stat_by_user">
                             <label for="filter_stat_by_user">Filter By User</label>
                         </div>
+
+                        <div ng-repeat="userName in allUserNames">
+                            <input type="checkbox" class="custom-control-input" id="filter_stat_user_{{userName}}" checked>
+                            <label class="custom-control-label" for="filter_stat_user_{{userName}}"></label>
+                        </div>
+
                     </div>
 
                     <div class="col-sm-6">
                         <div class="md-form">
-                            <i class="fas fa-users"></i>
+                            <i class="fas fa-users prefix"></i>
                             <input type="text" class="form-control" id="filter_stat_by_group">
                             <label for="filter_stat_by_group">Filter By Exp Group</label>
+                        </div>
+
+                        <div ng-repeat="expName in allTestExpNames">
+                            <input type="checkbox" class="custom-control-input" id="filter_stat_group_{{expName}}" checked>
+                            <label class="custom-control-label" for="filter_stat_group_{{expName}}"></label>
                         </div>
                     </div>
 
