add all and none to checkbox to filter in statistics.html

--- a/html/nav.html
+++ b/html/nav.html
@@ -463,9 +463,8 @@
 					<br>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						Close
-					</button>
+					<button class="btn btn-md btn-info m-1 px-3" type="button" data-dismiss="modal" aria-label="Close">
+						Close</button>
 				</div>
 			</div>
 		</div>
