--- a/html/statistics.html
+++ b/html/statistics.html
@@ -147,7 +147,7 @@
 
             </div>
             <div class="modal-footer">
-                <button class="close btn btn-md btn-info m-1 px-3" type="button" data-dismiss="modal" aria-label="Close">
+                <button class="btn btn-md btn-info m-1 px-3" type="button" data-dismiss="modal" aria-label="Close">
                     Apply changes</button>
             </div>
         </div>
